ajustes seção dicas

--- a/public/html/GymLife.html
+++ b/public/html/GymLife.html
@@ -129,47 +129,55 @@
             <h1>DICAS PARA INICIANTES NA ACADEMIA</h1>
         </div>
         <div class="subTitulo">
-            
-            <p>
-                A academia para iniciantes pode parecer um tanto quanto assustadora.
-                Afinal, são diversos equipamentos, pessoas mais experientes e muita expectativa. 
-                Por isso, montamos um guia com as informações mais importantes para você ter os melhores resultados no
+            <h2>
+                Confira um guia com as informações mais importantes para você ter os melhores resultados no
                 treino
-            </p>
+            </h2>
+
             <div class="topicos">
-                <h1>1 - Faça uma avaliação física</h1>
-                <span>Antes de mais nada, o primeiro passo é saber seu estado atual de saúde. Muitas academias oferecem
-                    avaliações físicas gratuitas para novos membros, que incluem medição de pressão arterial, índice de
-                    massa corporal (IMC), porcentagem de gordura corporal e teste de flexibilidade.
-                </span>
+                <h1>1 - FAÇA UMA AVALIAÇÃO FÍSICA</h1>
+                <div class="textos">
+                    <span>Antes de mais nada, o primeiro passo é saber seu estado atual de saúde. Muitas academias
+                        oferecem
+                        avaliações físicas gratuitas para novos membros, que incluem medição de pressão arterial, índice
+                        de
+                        massa corporal (IMC), porcentagem de gordura corporal e teste de flexibilidade.
+                    </span>
+                    <div class="imgDireita">
+                        <img src="../imagens/avaliacao.png">
+                    </div>
+                </div>
+            </div>
 
-                <h1>2 - Defina seus objetivos</h1>
-                <span>Para iniciar os treinos na academia, é importante ter metas específicas e realistas para seu
-                    programa de exercícios. Se seu objetivo é perder peso, por exemplo, você deve se concentrar em
-                    exercícios de cardio combinados com a musculação e, clro, uma alimentação saudável. Se você quer
-                    ganhar massa muscular, priorize mais os exercícios de força e se alimente, principalmente, de
-                    alimentos ricos em proteínas.</span>
+            <div class="topicosEsquerda">
+                <h1>2 - DEFINA SEUS OBJETIVOS</h1>
+                <div class="textos">
+                    <span>
+                        É importante ter metas específicas e realistas para seu programa de exercícios. Se seu objetivo é perder peso, por exemplo, você deve se concentrar em exercícios de cardio combinados com a musculação e, clro, uma alimentação saudável. Se você quer ganhar massa muscular, priorize mais os exercícios de força e se alimente, principalmente, de alimentos ricos em proteínas.
+                    </span>
+                    <div class="imgEsquerda">
+                        <img src="../imagens/objetivo.png">
+                    </div>
+                </div>
+            </div>
 
-                <h1>3 - Comece devagar</h1>
-                <span>
-                    É importante começar com um programa de exercícios adequado para seu nível de condicionamento
-                    físico. Não tente levantar pesos muito pesados ou fazer exercícios de alta intensidade logo no
-                    início. Portanto, comece com exercícios leves e aumente a intensidade gradualmente.
-                </span>
-
-                <h1>4 - Respeite seus limites</h1>
-                <span>
-                    Lembre-se que, na academia, você não precisa se esforçar até a exaustão a cada treino, especialmente
-                    se estiver começando. Ou seja, é essencial entender os próprios limites e respeitar os sinais que
-                    seu corpo dá. <br>
-                    A melhor maneira de progredir é controlando sempre o cansaço, fazendo apenas entre uma e três
-                    repetições de cada exercício e limitando o trabalho de cada grupo muscular a cerca de dez séries
-                    semanais.
-                </span>
+            <div class="topicos">
+                <h1>3 - FAÇA UMA AVALIAÇÃO FÍSICA</h1>
+                <div class="textos">
+                    <span>Antes de mais nada, o primeiro passo é saber seu estado atual de saúde. Muitas academias
+                        oferecem
+                        avaliações físicas gratuitas para novos membros, que incluem medição de pressão arterial, índice
+                        de
+                        massa corporal (IMC), porcentagem de gordura corporal e teste de flexibilidade.
+                    </span>
+                    <div class="imgDireita">
+                        <img src="../imagens/avaliacao.png">
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
 
 </body>
 
 </html>
+
