--- a/public/html/GymLife.html
+++ b/public/html/GymLife.html
@@ -241,7 +241,7 @@
             </ul>
             
             <ul>
-                <h3>Lins Rápidos</h3>
+                <h3>Links Rápidos</h3>
 
                 <li><a href="GymLife.html">Home</a></li>
                 <li><a href="cadastro.html">Cadastro</a></li>
