--- a/public/html/GymLife.html
+++ b/public/html/GymLife.html
@@ -243,7 +243,7 @@
             <ul>
                 <h3>Links Rápidos</h3>
 
-                <li><a href="GymLife.html">Home</a></li>
+                <li><a href="GymLife.html" target="_blank">Home</a></li>
                 <li><a href="cadastro.html">Cadastro</a></li>
                 <li><a href="login.html">Login</a></li>
                 
