criação do quiz

--- a/public/html/cadastro.html
+++ b/public/html/cadastro.html
@@ -47,6 +47,9 @@
                         Já tem uma conta? <a href="../html/login.html"> Faça login aqui</a>
                     </p>
                 </div>
+                <div id="div_aguardar" class="loading-div">
+                    <img src="./assets/circle-loading.gif" id="loading-gif" />
+                </div>
 
             </div>
         </div>
