--- a/public/html/GymLife.html
+++ b/public/html/GymLife.html
@@ -198,7 +198,7 @@
             </div>
 
             <div class="topicosDireita">
-                <h1>5 - HIDRATAÇÃO</h1>
+                <h1>5 - HIDRATE-SE</h1>
                 <div class="textos">
                     <span>
                         Beba bastante água o dia todo, não apenas durante ou após os exercícios. O nosso organismo
